syntax = 'proto3';

option go_package = "/grpc";

package user.v1;

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
}

message User {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string created_at = 5;
  string updated_at = 6;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  uint32 id = 1;
}

message DeleteUserResponse {
  User user = 1;
}

message ListUsersRequest {
  string name = 1;
  string email = 2;
  string created_at_from = 3;
  string created_at_to = 4;
}

message ListUsersResponse {
  repeated User users = 1;
}